--- a/README.html
+++ b/README.html
@@ -415,6 +415,9 @@ Cells in rows of measured intervals can contain whole column scripts only.</p>
 <p>Scripts in table are called profile. User can switch between profiles to easily manage different match types.
 Choose desired profile in <em>Script profiles</em> menu.</p>
 </div>
+<div class="paragraph">
+<p>Profiles are stored in user&#8217;s application data directory.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_environment_variables">Environment variables</h3>
@@ -495,7 +498,7 @@ Choose desired profile in <em>Script profiles</em> menu.</p>
 </dd>
 <dt class="hdlist1">Delete</dt>
 <dd>
-<p>Deletes selected script profile.</p>
+<p>Deletes selected script profile. Profile scripts are not removed immediately from table to allow undo by creating new profile.</p>
 </dd>
 <dt class="hdlist1">Get examples</dt>
 <dd>
@@ -568,7 +571,7 @@ Choose desired profile in <em>Script profiles</em> menu.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-09-13 13:31:58 CEST
+Last updated 2015-09-13 14:13:04 CEST
 </div>
 </div>
 </body>
