--- a/README.html
+++ b/README.html
@@ -492,6 +492,14 @@ Choose desired profile in <em>Script profiles</em> menu.</p>
 <dd>
 <p>Removes script from table and deactivates current profile.</p>
 </dd>
+<dt class="hdlist1">Import</dt>
+<dd>
+<p>Imports profile from archive file.</p>
+</dd>
+<dt class="hdlist1">Export</dt>
+<dd>
+<p>Exports profile to archive file.</p>
+</dd>
 <dt class="hdlist1">New</dt>
 <dd>
 <p>Creates new script profile. If there are scripts in table, the scripts are copies to newly created profile.</p>
@@ -571,7 +579,7 @@ Choose desired profile in <em>Script profiles</em> menu.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-09-13 14:13:04 CEST
+Last updated 2015-09-16 18:31:02 CEST
 </div>
 </div>
 </body>
