--- a/README.html
+++ b/README.html
@@ -545,6 +545,9 @@ Choose desired profile in <em>Script profiles</em> menu.</p>
 <li>
 <p>Boost library</p>
 </li>
+<li>
+<p>Minizip library</p>
+</li>
 </ul>
 </div>
 </dd>
@@ -579,7 +582,7 @@ Choose desired profile in <em>Script profiles</em> menu.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-09-16 18:31:02 CEST
+Last updated 2015-09-16 19:06:26 CEST
 </div>
 </div>
 </body>
